# openemr

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Makefile  PRD-week-1.md  PRD-week-2.md  README.md  USERS.md  W2_ARCHITECTURE.md  composer.json  version.php
.claude/: settings.json
.claude/agents/: citation-verifier.md  corpus-chunker.md  guideline-researcher.md
.claude/workflows/: corpus-curation.js
.github/workflows/: agent-tests.yml  (+3 more)
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
agent/api-collection/: .gitignore  01 Health.bru  02 Ready.bru  03 Chat - No Token (401).bru  04 Auth - Refresh Token.bru  05 Chat - New Turn.bru  06 Chat - Follow-up.bru  07 Chat - Patient Mismatch (403).bru  08 Documents - List.bru  09 Document Extraction.bru  10 Evidence - Search.bru  11 Chat - Full Week-2 Flow.bru  README.md  bruno.json
agent/api-collection/environments/: prod.example.bru
agent/fhir-substrate/: .gitignore  00 Auth - Refresh Token.bru  01 Patient (get_patient).bru  02 Problems - Condition (get_problems).bru  03 Medications - MedicationRequest (get_medications).bru  04 Allergies - AllergyIntolerance (get_allergies).bru  05 Encounters - Encounter (get_encounters).bru  06 Notes - DocumentReference (get_encounter_note).bru  07 Capability - metadata (ping).bru  README.md  bruno.json
agent/fhir-substrate/environments/: prod.example.bru
agent/loadtest/: .gitignore  README.md  locustfile.py  mint_token.py  run.sh
agent/scripts/: backfill_corpus_anchors.py  dump_openapi.py  mint-fhir-token.sh  ocr_spike.py  record_ocr_fixture.py
agent/src/copilot/: agent.py  api_schemas.py  citations.py  config.py  conversation.py  corpus.py  correlation.py  fhir_tools.py  health.py  main.py  masking.py  observability.py  openapi.py  pricing.py  rate_limit.py  retrieval.py  schemas.py  verification.py
agent/src/copilot/evals/: README.md  __init__.py  baseline.py  cases.py  experiment.py  judges.py  rubrics.py  runner.py  seed_dataset.py  verify_cases.py
agent/src/copilot/fhir/: client.py  fixtures.py  models.py
agent/src/copilot/fhir/seed/: patient-1-reyes.bundle.json  patient-2-okonkwo.bundle.json  patient-23-angulo.bundle.json  patient-3-nakamura.bundle.json  patient-example.json
agent/src/copilot/graph/: budget.py  deps.py  gate.py  outputs.py  routing.py  supervisor.py  workers.py
agent/src/copilot/ingestion/: __init__.py  errors.py  extractor.py  loinc.py  pdf_geometry.py  registry.py  schemas.py  wire.py
agent/src/copilot/ingestion/geometry/: __init__.py  boxes.py  document.py  fields.py  locators.py  spans.py  words.py
agent/src/copilot/rag/: corpus.py  index.py  models.py  retriever.py
agent/src/copilot/rag/corpus/: README.md  afib-anticoagulation.jsonl  asthma.jsonl  ckd.jsonl  heart-failure.jsonl  hypertension.jsonl  lipids.jsonl  nsaid-safety.jsonl  t2dm.jsonl
agent/tests/: conftest.py  graph_script.py  test_cases_ground_truth.py  test_chat_flow.py  test_citation.py  test_citations.py  test_conversation.py  test_corpus.py  test_docs_gating.py  test_document_bytes.py  test_document_discovery.py  test_document_facts.py  test_eval_gate.py  test_extractor.py  test_geometry_characterization.py  test_graph_flow.py  test_intake_extraction.py  test_lab_discovery.py  test_lab_observations.py  test_lab_series.py  test_loinc.py  test_masking.py  test_medication_list_extraction.py  test_notes.py  test_observability.py  test_openapi_contract.py  test_overlay_stamp.py  test_per_request_token.py  test_pricing.py  test_probe_schemas.py  test_rate_limit.py  test_read_endpoints.py  test_ready.py  test_retriever.py  test_retriever_qdrant_integration.py  test_schemas.py  test_seed_dataset.py  test_system_prompt_sync.py  test_tools.py  test_verification.py  (+1 more)
agent/tests/fixtures/: patient_bergstrom287.fhir.json
agent/tests/fixtures/documents/: README.md
agent/tests/fixtures/documents/extractions/: sergio-angulo-intake-form-v2.ocr.json  sergio-angulo-intake-form.ocr.json  sergio-angulo-lab-report-scanned.ocr.json  sergio-angulo-lab-report.ocr.json  sergio-angulo-medication-list.ocr.json
agent/tests/fixtures/documents/goldens/: sergio-angulo-lab-report-scanned.geometry.json  sergio-angulo-lab-report.geometry.json
agent/tests/fixtures/documents/src/: make-clean-pdf.py  make-scanned-variant.py  sergio-angulo-intake-form-v2.html  sergio-angulo-intake-form.html  sergio-angulo-lab-report.html  sergio-angulo-medication-list.html
context/: agent-workflow.md  architecture-doc-authoring-prompt.md  deployment-strategy.md  implementation-prompt-01-walking-skeleton.md  implementation-prompt-03a-smart-token-spike.md  patient-data-exposure-map.md
docs/: DELIVERABLES-week-1.md  DELIVERABLES-week-2.md
(+133 files in other folders)
