[project]
name = "agentforge-copilot"
version = "0.1.0"
description = "AgentForge Clinical Co-Pilot agent service (walking skeleton)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai>=0.0.20",
    "httpx>=0.27",
    "fhir.resources>=8.0",
    "langfuse>=4",
    # Hybrid RAG (JOS-53): Qdrant vector store + in-client FastEmbed (dense+sparse), Cohere rerank.
    "qdrant-client[fastembed]>=1.18,<2",
    "cohere>=5.8,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Load/stress testing the deployed /chat endpoint (agent/loadtest/, JOS-18).
# Installed into an isolated venv by run.sh; recorded here for provenance.
loadtest = [
    "locust>=2.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fhir.resources.*", "langfuse.*"]
ignore_missing_imports = true
