[project]
name = "agentforge-copilot"
version = "0.1.0"
description = "AgentForge Clinical Co-Pilot agent service (walking skeleton)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai>=0.0.20",
    "httpx>=0.27",
    "fhir.resources>=8.0",
    "langfuse>=4",
    # Hybrid RAG (JOS-53): Qdrant vector store + in-client FastEmbed (dense+sparse), Cohere rerank.
    "qdrant-client[fastembed]>=1.18,<2",
    "cohere>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Document extraction (intake-extractor VLM). OPTIONAL extra: mistralai 2.x pins
# opentelemetry-semantic-conventions<0.61, which conflicts with langfuse's 0.63b1 — keeping it out
# of the base install stops a plain `pip install -e .` from breaking langfuse tracing. Install with
# `pip install -e .[extraction]`, then force otel back to 0.63b1. Resolve the pin (a resolver
# override or a mistralai bump) when the extractor is wired into the service.
extraction = [
    "mistralai>=1.0",
]
# Load/stress testing the deployed /chat endpoint (agent/loadtest/, JOS-18).
# Installed into an isolated venv by run.sh; recorded here for provenance.
loadtest = [
    "locust>=2.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
# The synthetic-document fixture GENERATOR is PIL/numpy image code, not part of the typed agent
# surface — and strict mypy fights PIL's incomplete stubs (LANCZOS/BICUBIC exist at runtime). Keep
# the fixtures-generator tree out of type-checking; ruff still lints it.
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["fhir.resources.*", "langfuse.*"]
ignore_missing_imports = true
